--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE HTML>
 <html lang="tr" />
 <head>
@@ -15,47 +14,29 @@
 <meta name="referrer" content="unsafe-url" /> <!-- csrf mobil için -->
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon" />
 <link rel="canonical" href="{{ CANONICAL_PATH }}" />
-
-
-<!-- jQuery -->
+<!-- jQuery js -->
 <link href="{% static 'css/jquery-ui.min.css' %}" rel="stylesheet" type="text/css" />
 <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript" async></script>
-
-
-<!-- Bootstrap4 files-->
+<!-- Bootstrap4 js-->
 <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript" async></script>
-
-
 <!-- bootstrap css -->
 <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
+<!-- tailwindcss -->
 <script src="https://cdn.tailwindcss.com"></script>
-
 <!-- Font awesome 5 -->
 <link href="{% static 'fonts/fontawesome/css/all.css' %}" type="text/css" rel="stylesheet" />
-
-<!-- custom style -->
+<!-- custom-responsive-ui css -->
 <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
-
 <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
-
-
 <!-- HTMX -->
   <script src="https://unpkg.com/htmx.org@1.8.4"></script>
-
-
-
 </head>
-
 <body>
-
 {% include "includes/navbar.html" %}
-
   {% block content %}
     {% endblock %}
-
 {% include "includes/footer.html" %}
-
 <!-- auto complete -->
 <script src="{% static 'js/jquery-ui.min.js' %}"></script>
 <script>
