--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,86 +1,56 @@
 {% load static %}
-
-
-
 <header class="section-header">
-
-<nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom pl-1 flex">
-
-
+<nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom pl-1 flex"><!-- iletisim -->
   <div class="navbar-collapse mx-auto justify-end">
-
-    <ul class="navbar-nav mr-auto">
-    </ul>
-
+    <ul class="navbar-nav mr-auto"></ul>
 {% for ayarlar in ayarlar %}
-    <span><svg viewBox="0 0 24 24" width="16" height="20" stroke="blacka" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-black"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
-    </svg>
+  <span><svg viewBox="0 0 24 24" width="16" height="20" stroke="blacka" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-black"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
       <a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
       <svg viewBox="0 0 24 24" width="22" height="18" stroke="black" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-black"><polygon points="3 11 22 2 13 21 11 13 3 11"></polygon></svg>{{ ayarlar.adres }}</a>
       <span class="mr-2 ml-1"><svg viewBox="0 0 24 24" width="22" height="22" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-zinc-700 -mt-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>{{ ayarlar.saat }}</span>
 {% endfor %}
-
-  </div> <!-- navbar-collapse .// -->
-
-</nav>
+  </div>
+</nav><!-- iletisim// -->
 
 <section class="header-main border-bottom border-0">
-
   <div class="container flex-row">
-
 <div class="row align-items-center">
-
-
 <!-- özel günler için>
-    <div class="col-lg col-sm col-md flex-grow-0">
-      <img class="logo" src="{% static 'images/ozel_gunler.png' %}">
-  </div>
-  <!-->
-
-
-  <div class="flex justify-center col-lg col-sm col-md col-4 flex-grow-0">
+<div class="col-lg col-sm col-md flex-grow-0"><img class="logo" src="{% static 'images/ozel_gunler.png' %}"></div>
+<!-->
+  <div class="flex justify-center col-lg col-sm col-md col-4 flex-grow-0"><!-- anasayfa buton -->
     <div class="category-wrap dropdown d-inline-block float-right">
 <a href="{% url 'home' %}" class="btn btn-outline-primary hover:bg-blue-600 -ml-3">Anasayfa</a>
+    </div>
+  </div> <!-- anasayfa buton// -->
 
-
-
-
-
-    </div>  <!-- category-wrap.// -->
-  </div> <!-- col.// -->
-
-  <div class="pl-0 col-lg col-sm col-md col-8 flex-grow-0">
-
+<div class="pl-0 col-lg col-sm col-md col-8 flex-grow-0"> <!-- kategoriler buton -->
     <button id="dropdownDefault" data-toggle="dropdown"  class="text-white bg-blue-600 hover:bg-blue-700  focus:outline-none font-medium rounded  px-3 py-2  inline-flex items-center -ml-1" type="button">
       <span class="-ml-1">Kategoriler</span>
       <svg class="ml-2 w-4 h-4" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
     </button>
-
   <div class="dropdown-menu">
     {% for category in links %}
     <a class="dropdown-item" href="{{ category.get_url }}">
       <span class="-ml-3">{{ category.category_name }}</span></a>
     {% endfor %}
   </div>
-  </div>
+  </div> <!-- kategoriler buton// -->
 
-  <div class="col-lg  col-md-6 col-sm-12 col">
+  <div class="col-lg  col-md-6 col-sm-12 col"><!-- search -->
     <form action="{% url 'search' %}" class="search" method="GET">
       <div class="input-group">
           <input type="search" class="form-control p-4 hover:bg-white rounded-lg focus:dark:placeholder-white/50 font-normal text-md bg-zinc-100 dark:bg-zinc-800  focus:bg-white focus:dark:bg-zinc-700 border-2 border-zinc-100 dark:!border-zinc-800  placeholder-zinc-400 dark:placeholder-zinc-600 text-black dark:text-white focus:shadow-lg focus:shadow-zinc-300 focus:dark:shadow-black/20 focus:dark:!border-zinc-600 focus:border-zinc-100" placeholder="ürün ara" name="keyword" id="anahtar">
           <div class="relative">
-        <button type="submit" class="btn absolute z-10 rounded-lg px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white  right-2 bottom-1" aria-label="arama butonu">
-          Ara
-        </button>
+        <button type="submit" class="btn absolute z-10 rounded-lg px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white  right-2 bottom-1" aria-label="arama butonu">Ara</button>
         </div>
-        </div>
-    </form> <!-- search-wrap .end// -->
-  </div> <!-- col.// -->
+      </div>
+    </form>
+  </div> <!-- search// -->
 
-
-  <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
+  <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3"> <!-- login/register -->
         <div class="d-flex justify-content-end mb-3 mb-lg-0">
           {% if user.id is None %}
           <div class="widget-header">
@@ -105,13 +75,10 @@
             </div>
             <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
           </a>
-        </div> <!-- widgets-wrap.// -->
-      </div> <!-- col.// -->
+        </div>
+      </div> <!-- login/register -->
 
 </div> <!-- row.// -->
-
   </div> <!-- container.// -->
-
 </section> <!-- header-main .// -->
-
 </header> <!-- section-header.// -->
