--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,20 @@
 {% extends "base.html" %}
-
 {% load static %}
-
 {% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}
 {% block keywords %}engin elektronik{% endblock %}
 {% block title %}Engin Elektronik Tv.Hastanesi {% endblock %}
-
-
 {% block content %}
+<section class="section-pagetop bg mt-3" style="background-color: white;"> <!-- section -->
+<div class="container"><!-- container -->
+	<div class="row"> <!-- row -->
 
-
-
-<!-- ========================= SECTION PAGETOP ========================= -->
-<section class="section-pagetop bg mt-3" style="background-color: white;">
-
-<div class="container">
-	<div class="row">
-
-		<aside class="col-md-3 md:flex" style="margin-left: -15px;">
+		<aside class="col-md-3 md:flex" style="margin-left: -15px;"> <!-- sol kategori -->
 			<div class="flex card w-72" style="height:1200px;">
 				<article class="filter-group">
 					<header class="card-header">
 						<i class="icon-control fa fa-list"></i>
 							<h6 class="text-md font-bold text-blue-600">Kategoriler</h6>
 					</header>
-
 					<div class="filter-content show" id="collapse_1">
 						<div class="card-body pl-1.5" style="margin-top: -15px; margin-left: -3px">
 							<ul class="list-menu">
@@ -34,37 +24,19 @@
 			 </li>
 					 {% endfor %}
 							</ul>
-						</div> <!-- card-body.// -->
+						</div>
 					</div>
+				</article>
+			</div>
+		</aside> <!-- sol kategori// -->
 
-				</article> <!-- filter-group  .// -->
-
-			</div> <!-- card.// -->
-
-		</aside> <!-- col.// -->
-
-
-<aside class="col-md-9">
-
-
-
-
-
+<aside class="col-md-9"> <!-- ürünler ve yukarı çık -->
      {% include 'list.html' %}
-
-
 <a href="#" class="bas" aria-label="yukarı çık" style="width:45px; height:45px; display:none; background-color: #a1d5e3; border-radius: 50px; box-shadow: 0 2px 8px 0 rgb(0 0 0 / 15%); position:fixed; padding:8px; z-index:100; right:0; bottom:0; margin-bottom: 10px; margin-right:3px; opacity:0.9;">
-<svg viewBox="0 0 24 24" width="55" height="35" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 -ml-3.5 -mt-1"><polyline points="18 15 12 9 6 15"></polyline></svg>
-</a>
-
-
-
-</aside>
+<svg viewBox="0 0 24 24" width="55" height="35" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 -ml-3.5 -mt-1"><polyline points="18 15 12 9 6 15"></polyline></svg></a> <!-- yukarı çık// -->
+</aside> <!-- ürünler ve yukarı çık// -->
 
 	</div> <!-- row // -->
 </div> <!-- container //  -->
-</section>
-<!-- ========================= SECTION INTRO END// ========================= -->
-
-
+</section> <!-- section // -->
 {% endblock %}
