--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -66,7 +66,7 @@
 	  </div>
 	  <div class="col form-group">
 	    <label for="">Telefon:</label>
-	    <input type="text" name="phone" value="{{ user.phone_number }}" maxlength="11" class="form-control" required>
+	    <input type="text" placeholder="05451973471 şeklinde 11 hane giriniz" name="phone" value="{{ user.phone_number }}" minlength="11" maxlength="11" class="form-control" required>
 	  </div>
 	    </div>
 	    <div class="form-row">
