--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
 <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
 <!-- tailwindcss -->
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.2/flowbite.min.js"></script>
+
 <!-- Font awesome 5 -->
 <link href="{% static 'fonts/fontawesome/css/all.css' %}" type="text/css" rel="stylesheet" />
 <!-- custom-responsive-ui css -->
