--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -11,21 +11,28 @@ Arama - Engin Elektronik
 {% block content %}
 
 <!-- gelişmiş arama yap -->
-					<div class="container">
-Filtreye Göre Ara:
-            <form method="GET" action="{% url 'filter_results' %}">
-	<div class="col-lg col-sm col-md col-6 flex-grow-0">
+					<div class="container mt-1">
+<svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline"><polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon></svg>
+Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outline-none" data-popover-placement="right" type="button"><svg class="w-4 h-4 ml-2 text-gray-400 hover:text-gray-500" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path></svg></button>
+<div data-popover id="popover-right" role="tooltip" class="w-48 absolute z-10 invisible inline-block text-sm font-light text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:bg-gray-800 dark:border-gray-600 dark:text-gray-400">
 
-		Marka:
+        <h3 class="text-md text-gray-900 dark:text-white">Marka veya Kategori'ye göre<br>arama yapılabilir</h3>
+
+    <div data-popper-arrow></div>
+</div>
+
+
+            <form method="GET" action="{% url 'filter_results' %}">
+	<div class="col-lg col-sm col-md col-6 flex-grow-0 mt-1">
+
+		<span class="ml-1">Uyumlu Marka:</span>
 	<!--	 {{ myFilter.form.brand }} -->
-	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6">
-		<option value="" selected="">---------</option>
+	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6 ml-1">
+		<option value="" selected=""></option>
 <option value="ALBA">alba</option>
 <option value="Arçelik-Beko-Grundig-Altus">arcelik-beko-grundig-altus</option>
 <option value="AWOX">awox</option>
 <option value="AXEN">axen</option>
-<option value="Botech">botech</option>
-<option value="CVS">cvs</option>
 <option value="Dijitsu">dijitsu</option>
 <option value="Dreamstar">dreamstar</option>
 <option value="GEEPAS">geepas</option>
@@ -54,10 +61,10 @@ Filtreye Göre Ara:
 <option value="YUMATU">yumatu</option>
 			</select>
 
-		Kategori:
+		<span class="ml-1">Kategori:</span>
 	 <!--   {{ myFilter.form.category }} -->
-	 <select name="category" id="id_category" class="bg-zinc-100 rounded h-6">
-		<option value="" selected="">---------</option>
+	 <select name="category" id="id_category" class="bg-zinc-100 rounded h-6 ml-1">
+		<option value="" selected=""></option>
  <option value="25">Android Box</option>
  <option value="33">Arçelik-Beko-Grundig-Altus Anakart</option>
  <option value="34">Arçelik-Beko-Grundig-Altus Powerboard</option>
@@ -68,7 +75,6 @@ Filtreye Göre Ara:
  <option value="10">Led Driver Boardlar</option>
  <option value="4">LG Anakart</option>
  <option value="5">LG Powerboard</option>
- <option value="24">Oto Teyp</option>
  <option value="2">Philips Anakart</option>
  <option value="3">Philips Powerboard</option>
  <option value="16">Profilo Anakart</option>
