--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -25,7 +25,7 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
             <form method="GET" action="{% url 'filter_results' %}">
 	<div class="col-lg col-sm col-md col-6 flex-grow-0 mt-1">
 
-		<span class="ml-1">Uyumlu Marka:</span>
+		<span class="ml-1">Marka:</span>
 	<!--	 {{ myFilter.form.brand }} -->
 	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6 ml-1">
 		<option value="" selected=""></option>
