--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -115,7 +115,7 @@ Satıştan Kaldırıldığı Tarih:
 	<article class="content-body" style="margin-left: -25px;">
 	<h2 class="flex text-3xl font-bold mb-2">{{ single_product.product_name }}</h2>
 	<div class="mb-3">
-	 <b>Marka:&nbsp;</b>{{ single_product.brand }}<br>
+	 <b>Uyumlu Marka:&nbsp;</b>{{ single_product.brand }}<br>
 	 <b>Durum:&nbsp;</b>{{ single_product.durum }}<br>
 	 <b>Stok:</b>
 {% if single_product.stock == 1 %}
