--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -29,7 +29,6 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 	<!--	 {{ myFilter.form.brand }} -->
 	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6 ml-1">
 		<option value="" selected=""></option>
-<option value="ALBA">alba</option>
 <option value="Arçelik-Beko-Grundig-Altus">arcelik-beko-grundig-altus</option>
 <option value="AWOX">awox</option>
 <option value="AXEN">axen</option>
@@ -49,6 +48,7 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 <option value="PHILIPS">philips</option>
 <option value="Premier">premier</option>
 <option value="Profilo">profilo</option>
+<option value="REGAL">regal</option>
 <option value="ROWELL">rowell</option>
 <option value="SAMSUNG">samsung</option>
 <option value="SANYO">sanyo</option>
@@ -57,7 +57,13 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 <option value="SUNNY">sunny</option>
 <option value="SUNNY-AXEN">sunny-axen</option>
 <option value="SONY">sony</option>
-<option value="Vestel-Toshiba">vestel-toshiba</option>
+<option value="Vestel">vestel</option>
+<option value="Vestel-ALBA">vestel-alba</option>
+<option value="Vestel,Hi-Level">vestel,hi-level</option>
+<option value="Vestel-Regal">vestel-regal</option>
+<option value="Vestel-SEG">vestel-seg</option>
+<option value="Vestel-Techwood-Regal">vestel-techwood-regal</option>
+<option value="Vestel-Toshiba-Profilo">vestel-toshiba-profilo</option>
 <option value="YUMATU">yumatu</option>
 			</select>
 
