--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -29,12 +29,20 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 	<!--	 {{ myFilter.form.brand }} -->
 	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6 ml-1">
 		<option value="" selected=""></option>
+<option value="Arçelik">arçelik</option>
+<option value="Beko">beko</option>
+<option value="Arçelik-Beko">arçelik-beko</option>
+<option value="Arçelik-Grundig">arçelik-grundig</option>
+<option value="Arçelik-Beko-Grundig">arçelik-beko-grundig</option>
 <option value="Arçelik-Beko-Grundig-Altus">arcelik-beko-grundig-altus</option>
+<option value="Altus-Grundig">altus-grundig</option>
+<option value="Beko-Grundig">beko-grundig</option>
 <option value="AWOX">awox</option>
 <option value="AXEN">axen</option>
 <option value="Dijitsu">dijitsu</option>
 <option value="Dreamstar">dreamstar</option>
 <option value="GEEPAS">geepas</option>
+<option value="Grundig">grundig</option>
 <option value="Hisense">hisense</option>
 <option value="Homstar">homstar</option>
 <option value="LG">lg</option>
@@ -72,8 +80,8 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 	 <select name="category" id="id_category" class="bg-zinc-100 rounded h-6 ml-1">
 		<option value="" selected=""></option>
  <option value="25">Android Box</option>
- <option value="33">Arçelik-Beko-Grundig-Altus Anakart</option>
- <option value="34">Arçelik-Beko-Grundig-Altus Powerboard</option>
+ <option value="33">Arçelik-Beko-Grundig Anakart</option>
+ <option value="34">Arçelik-Beko-Grundig Powerboard</option>
  <option value="20">Awox Anakart</option>
  <option value="8">Diğer Anakartlar</option>
  <option value="9">Diğer Powerboardlar</option>
