--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -19,7 +19,7 @@
 </footer><!-- footer// -->
 
 <!-- thumbnail resim geçiş -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" async></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" async defer></script>
 <script>
 	$(document).ready(function(){
 		$('.thumb a').click(function(e){
@@ -66,7 +66,7 @@
 </script>
 
 <!-- link paylaş -->
-<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6384c931233b3c001362c788&product=inline-share-buttons' async='async'>
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6384c931233b3c001362c788&product=inline-share-buttons' async='async' defer>
 </script>
 
 </body>
