--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -70,7 +70,7 @@
 Satıştan Kaldırıldığı Tarih:
 <span class="bg-gray-100 text-gray-800 text-sm font-medium inline-flex items-center px-2.5 py-0.5 rounded mr-2 dark:bg-gray-700 dark:text-gray-400 border border-gray-500">
 <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 -ml-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-&nbsp;{{ single_product.modified_date }}</span>
+&nbsp;{{ single_product.sontarih }}</span>
 
 	{% else %}
 	<div class="card mt-1">
