--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -66,7 +66,7 @@
 <span class="text-base">{{ single_product.description | safe }} </span>
 <br>
 <hr class="mb-2">
-	<h5 class="text-xl text-gray-500"><b>Bu ürün satıldı, satıştan kaldırılmıştır</b></h5>
+	<h5 class="text-xl text-gray-500"><b>Bu ürün satıldı, satıştan kaldırıldı.</b></h5>
 Satıştan Kaldırıldığı Tarih:
 <span class="bg-gray-100 text-gray-800 text-sm font-medium inline-flex items-center px-2.5 py-0.5 rounded mr-2 dark:bg-gray-700 dark:text-gray-400 border border-gray-500">
 <svg viewBox="0 0 24 24" width="14" height="14" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 -ml-1"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
