--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-{% block title %} Kayıt Ol - Engin Elektronik  {% endblock %}
+{% block title %} Kaydol - Engin Elektronik  {% endblock %}
 
 {% block content %}
 
