--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -16,7 +16,7 @@
 <h3 class="text-center  text-2xl font-bold"> Alışveriş Sepetin Boş</h3>
 <br>
 <div class="text-center">
-	<a href="{% url 'home' %}" class="btn bg-blue-600 hover:bg-blue-700 text-white px-3 py-2">Ürünlere Git&nbsp;&nbsp;<i class="fas fa-arrow-right"></i></a>
+	<a href="{% url 'home' %}" class="btn text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 px-3 py-2 text-center mr-2 mb-2">Ürünlere Git&nbsp;&nbsp;<i class="fas fa-arrow-right"></i></a>
 	</div>
 
 {% else %}
