--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
 {% load static %}
 <footer class="section-footer border-top"><!-- footer -->
 	<div class="container">
-		<section class="footer-bottom border-top row flex">
+		<section class="footer-bottom row flex">
 			<div class="col-md-3 pl-0 mr-10">
 				{% for ayarlar in ayarlar %}
 				<span class="ml-1">{{ ayarlar.copy }}</span>
