--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,12 @@
 {% block keywords %}engin elektronik{% endblock %}
 {% block title %}Engin Elektronik Tv.Hastanesi {% endblock %}
 {% block content %}
-<section class="section-pagetop bg mt-3" style="background-color: white;"> <!-- section -->
+<section class="section-pagetop bg-zinc-100 mt-3"> <!-- section -->
 <div class="container"><!-- container -->
 	<div class="row"> <!-- row -->
 
 		<aside class="col-md-3 md:flex" style="margin-left: -15px;"> <!-- sol kategori -->
-			<div class="flex card w-72" style="height:1200px;">
+			<div class="flex card w-72 rounded-xl border-8 border-white mt-2" style="height:1200px;">
 				<article class="filter-group">
 					<header class="card-header">
 						<i class="icon-control fa fa-list"></i>
