--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-<section class="section-content padding-y bg">
+<section class="section-content padding-y bg-zinc-100">
 
 <div class="container">
 
@@ -62,7 +62,7 @@
 <h1 class="text-2xl font-semibold -mt-3">Alışveriş Sepetim:</h1><br>
 <div class="row">
 	<aside class="col-md-7 md:flex -ml-2">
-<div class="card">
+<div class="card rounded-lg border-0 border-white">
 <table class="table w-full">
 <thead class="text-muted">
 <tr class="small text-uppercase">
@@ -119,7 +119,7 @@
 	</aside> <!-- col.// -->
 	<aside class="col-md-5 md:flex -ml-2 ">
 
-		<div class="card h-60">
+		<div class="card h-60 rounded-lg border-8 border-white">
 		<div class="card-body">
 
 <div class="mb-3">
