--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -29,7 +29,7 @@
 <!-- breadcrumb // -->
 
 {% if single_product.stock <= 0 %}
-<div class="card mt-1">
+<div class="card mt-1 border-8 border-white rounded-lg">
 <div class="row no-gutters">
 
 		<aside class="col-md-5"> <!-- gri resim -->
@@ -73,7 +73,7 @@ Satıştan Kaldırıldığı Tarih:
 &nbsp;{{ single_product.sontarih }}</span>
 
 	{% else %}
-	<div class="card mt-1">
+	<div class="card mt-1 border-8 border-white rounded-lg">
 		<div class="row no-gutters">
 
 			<aside class="col-md-5"> <!-- gallery -->
@@ -189,7 +189,7 @@ Satıştan Kaldırıldığı Tarih:
 </section>  <!-- section1 // -->
 
 {% if related_product %} <!-- related_product -->
-<section class="pt-3 pb-3 -mt-12">
+<section class="pt-3 pb-3 -mt-12 bg-zinc-100">
     <div class="container mx-auto">
         <div class="row">
 					<button class="btn hover:cursor-default select-none hover:bg-sky-100 bg-sky-50 rounded ml-3">Benzer Ürünler:</button>
@@ -197,7 +197,7 @@ Satıştan Kaldırıldığı Tarih:
                             <div class="row sagsol" style="margin-top: 3px;">
 															{% for i in related_product %}
 																<div class="col-md-2">
-																<figure class="card card-product-grid">
+																<figure class="card card-product-grid border-0 rounded-lg">
 																	<div class="img-wrap">
 																		 <a href="{{i.benzerlink}}" target="_blank"><img class="rounded" src="{{ i.benzerresimlink }}" alt="benzer ürün" /></a>
 																	</div> <!-- img-wrap.// -->
