--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -4,7 +4,7 @@
 {% block description %}{{ single_product.product_name }} - {{ single_product.description | safe }}  {% endblock %}
 {% block keywords %}{{ single_product.tags }}{% endblock %}
 {% block content %}
-<section class="section-content padding-y bg"> <!-- section1 -->
+<section class="section-content padding-y bg-zinc-100"> <!-- section1 -->
 <div class="container"> <!-- container -->
 
 	<ul class="breadcrumb" style="margin-top: -17px; margin-bottom: 5px;"> <!-- breadcrumb -->
